# TestWork14

./: .gitignore  Dockerfile  README.md  constants.py  docker-compose.yml  env.example  main.py  pyproject.toml  ruff.toml
api/: __init__.py
api/v1/: __init__.py  monitoring.py  quotes.py
application/controllers/: quotes.py
application/dto/: request.py  response.py
domain/models/: quote.py
domain/services/: quotes_parser.py
infrastructure/: celery_cfg.py  constants.py  environment.py  http_client.py  logging_cfg.py
infrastructure/fastapi_cfg/: __init__.py  lifespan.py
infrastructure/mongo_db/: connector.py  quotes_index.py  quotes_repository.py
