[project]
name = "testwork14"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.1",
    "redis>=6.4.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]
